# docx-template-generation

backend/: Cargo.toml  sss.docx
backend/src/: config.rs  lib.rs  main.rs
backend/src/modules/: cors.rs  custom_error.rs  mod.rs  placeholders.rs  request_utils.rs  templates.rs
frontend/: .eslintrc  .prettierrc  craco.config.js  package-lock.json  package.json  tsconfig.paths.json
frontend/src/: App.tsx  emotion.d.ts  index.tsx
frontend/src/components/BaseLayout/: BaseLayout.tsx  styles.ts
frontend/src/components/generic/: index.ts
frontend/src/components/generic/Button/: Button.tsx  styles.ts  types.ts
frontend/src/components/generic/Checkbox/: Checkbox.tsx  styles.ts  types.ts
frontend/src/components/generic/Input/: Input.tsx  styles.ts  types.ts
frontend/src/components/generic/Modal/: Modal.tsx  types.ts
frontend/src/components/generic/Toast/: Toast.tsx  styles.ts  types.ts
frontend/src/components/hooks/: index.ts
frontend/src/components/hooks/useApi/: index.ts  types.ts  useApi.ts
frontend/src/components/pages/TemplatePage/: TemplatePage.tsx  index.ts  styles.ts
frontend/src/components/pages/TemplatePage/AddTemplates/: AddTemplates.tsx  index.ts  styles.ts  types.ts
frontend/src/components/pages/TemplatePage/GenerationForm/: GenerationForm.tsx  index.ts  styles.ts  types.ts
frontend/src/components/pages/TemplatePage/PlaceholdersList/: PlaceholdersList.tsx  styles.ts
frontend/src/components/store/: CheckedTemplatesData.ts  index.ts  notification.ts  templates.ts
frontend/src/theme/: index.ts
(+12 files in other folders)
