[package]
name = "backend"
version = "0.1.0"
authors = ["Artem <Artemasdwasdw@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
rocket_cors = "0.5.2"
serde = "1.0"
serde_derive = "1.0.126"
zip = "0.5.12"
regex = "1.5.4"
multipart = "0.18.0"